Fix CheckStyle violation