@@ -1,8 +1,8 @@
 # Athena UI test session
 
 - Plan: `C:\Users\jiang\Duke\ip\test\ui-test-plan.md`
-- Started: 2026-09-04T20:41:35+08:00
-- Status: **FAILED**
+- Started: 2026-09-05T00:22:15+08:00
+- Status: **PASSED**
 
 ## Build
 
@@ -12,13 +12,13 @@
 ### Console output
 
 ````text
-> Task :compileJava
+> Task :compileJava UP-TO-DATE
 > Task :processResources UP-TO-DATE
-> Task :classes
+> Task :classes UP-TO-DATE
 > Task :shadowJar
 
-BUILD SUCCESSFUL in 8s
-3 actionable tasks: 2 executed, 1 up-to-date
+BUILD SUCCESSFUL in 9s
+3 actionable tasks: 1 executed, 2 up-to-date
 Consider enabling configuration cache to speed up this build: https://docs.gradle.org/9.6.1/userguide/configuration_cache_enabling.html
 
 ````
@@ -41,17 +41,20 @@ bye
 ### Actual console output
 
 ````text
-Sept 04, 2026 8:41:44 PM com.sun.javafx.application.PlatformImpl startup
-WARNING: Unsupported JavaFX configuration: classes were loaded from 'unnamed module @6d5e123c'
-WARNING: A restricted method in java.lang.System has been called
-WARNING: java.lang.System::load has been called by com.sun.glass.utils.NativeLibLoader in an unnamed module (file:/C:/Users/jiang/Duke/ip/build/libs/athena.jar)
-WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
-WARNING: Restricted methods will be blocked in a future release unless native access is enabled
-
-WARNING: A terminally deprecated method in sun.misc.Unsafe has been called
-WARNING: sun.misc.Unsafe::allocateMemory has been called by com.sun.marlin.OffHeapArray (file:/C:/Users/jiang/Duke/ip/build/libs/athena.jar)
-WARNING: Please consider reporting this to the maintainers of class com.sun.marlin.OffHeapArray
-WARNING: sun.misc.Unsafe::allocateMemory will be removed in a future release
+File not found at: ./data/athena.txt
+____________________________________________________________
+    _  _____ _   _ _____ _   _    _    
+   / \|_   _| | | | ____| \ | |  / \   
+  / _ \ | | | |_| |  _| |  \| | / _ \  
+ / ___ \| | |  _  | |___| |\  |/ ___ \ 
+/_/   \_\_| |_| |_|_____|_| \_/_/   \_\
+Hello, Your Majesty! I'm Athena.
+How may I assist you, Your Majesty?
+____________________________________________________________
+____________________________________________________________
+____________________________________________________________
+Farewell, Your Majesty. I hope to serve you again soon!
+____________________________________________________________
 
 ````
 
@@ -74,6 +77,402 @@ Farewell, Your Majesty. I hope to serve you again soon!
 ____________________________________________________________
 ````
 
-### Result: FAIL
+### Result: PASS
 
-Failure reason: console output mismatch
+## Test case 2: Manage a todo through its lifecycle
+
+- Aim: Verify adding, listing, marking, unmarking, and deleting a todo in one stateful session.
+- Command: `java -jar "C:/Users/jiang/Duke/ip/build/libs/athena.jar"`
+- Working directory: isolated temporary directory
+- Exit code: `0` (expected `0`)
+
+### Console input
+
+````text
+todo Read the project brief
+list
+mark 1
+unmark 1
+delete 1
+list
+````
+
+### Actual console output
+
+````text
+File not found at: ./data/athena.txt
+____________________________________________________________
+    _  _____ _   _ _____ _   _    _    
+   / \|_   _| | | | ____| \ | |  / \   
+  / _ \ | | | |_| |  _| |  \| | / _ \  
+ / ___ \| | |  _  | |___| |\  |/ ___ \ 
+/_/   \_\_| |_| |_|_____|_| \_/_/   \_\
+Hello, Your Majesty! I'm Athena.
+How may I assist you, Your Majesty?
+____________________________________________________________
+____________________________________________________________
+As you command, Your Majesty. I've added this task:
+  [T][ ] Read the project brief
+You now have 1 tasks in the list, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+Your Majesty, here are the tasks in your list:
+1. [T][ ] Read the project brief
+____________________________________________________________
+____________________________________________________________
+Excellent, Your Majesty! I've marked this task as done:
+  [T][X] Read the project brief
+____________________________________________________________
+____________________________________________________________
+Certainly, Your Majesty. I've marked this task as not done yet:
+  [T][ ] Read the project brief
+____________________________________________________________
+____________________________________________________________
+As you wish, Your Majesty. I've removed this task:
+  [T][ ] Read the project brief
+You now have 0 tasks in the list, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+Your Majesty, here are the tasks in your list:
+____________________________________________________________
+
+````
+
+### Expected console output
+
+````text
+File not found at: ./data/athena.txt
+____________________________________________________________
+    _  _____ _   _ _____ _   _    _
+   / \|_   _| | | | ____| \ | |  / \
+  / _ \ | | | |_| |  _| |  \| | / _ \
+ / ___ \| | |  _  | |___| |\  |/ ___ \
+/_/   \_\_| |_| |_|_____|_| \_/_/   \_\
+Hello, Your Majesty! I'm Athena.
+How may I assist you, Your Majesty?
+____________________________________________________________
+____________________________________________________________
+As you command, Your Majesty. I've added this task:
+  [T][ ] Read the project brief
+You now have 1 tasks in the list, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+Your Majesty, here are the tasks in your list:
+1. [T][ ] Read the project brief
+____________________________________________________________
+____________________________________________________________
+Excellent, Your Majesty! I've marked this task as done:
+  [T][X] Read the project brief
+____________________________________________________________
+____________________________________________________________
+Certainly, Your Majesty. I've marked this task as not done yet:
+  [T][ ] Read the project brief
+____________________________________________________________
+____________________________________________________________
+As you wish, Your Majesty. I've removed this task:
+  [T][ ] Read the project brief
+You now have 0 tasks in the list, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+Your Majesty, here are the tasks in your list:
+____________________________________________________________
+````
+
+### Result: PASS
+
+## Test case 3: Add dated tasks
+
+- Aim: Verify deadline and event commands parse dates and display their formatted times.
+- Command: `java -jar "C:/Users/jiang/Duke/ip/build/libs/athena.jar"`
+- Working directory: isolated temporary directory
+- Exit code: `0` (expected `0`)
+
+### Console input
+
+````text
+deadline Submit report /by 2026-12-31 2359
+event Team meeting /from 2026-12-30 1400 /to 2026-12-30 1500
+list
+````
+
+### Actual console output
+
+````text
+File not found at: ./data/athena.txt
+____________________________________________________________
+    _  _____ _   _ _____ _   _    _    
+   / \|_   _| | | | ____| \ | |  / \   
+  / _ \ | | | |_| |  _| |  \| | / _ \  
+ / ___ \| | |  _  | |___| |\  |/ ___ \ 
+/_/   \_\_| |_| |_|_____|_| \_/_/   \_\
+Hello, Your Majesty! I'm Athena.
+How may I assist you, Your Majesty?
+____________________________________________________________
+____________________________________________________________
+As you command, Your Majesty. I've added this task:
+  [D][ ] Submit report (by: Dec 31, 2026, 23:59)
+You now have 1 tasks in the list, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+As you command, Your Majesty. I've added this task:
+  [E][ ] Team meeting (from: Dec 30, 2026, 14:00, to: Dec 30, 2026, 15:00)
+You now have 2 tasks in the list, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+Your Majesty, here are the tasks in your list:
+1. [D][ ] Submit report (by: Dec 31, 2026, 23:59)
+2. [E][ ] Team meeting (from: Dec 30, 2026, 14:00, to: Dec 30, 2026, 15:00)
+____________________________________________________________
+
+````
+
+### Expected console output
+
+````text
+File not found at: ./data/athena.txt
+____________________________________________________________
+    _  _____ _   _ _____ _   _    _
+   / \|_   _| | | | ____| \ | |  / \
+  / _ \ | | | |_| |  _| |  \| | / _ \
+ / ___ \| | |  _  | |___| |\  |/ ___ \
+/_/   \_\_| |_| |_|_____|_| \_/_/   \_\
+Hello, Your Majesty! I'm Athena.
+How may I assist you, Your Majesty?
+____________________________________________________________
+____________________________________________________________
+As you command, Your Majesty. I've added this task:
+  [D][ ] Submit report (by: Dec 31, 2026, 23:59)
+You now have 1 tasks in the list, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+As you command, Your Majesty. I've added this task:
+  [E][ ] Team meeting (from: Dec 30, 2026, 14:00, to: Dec 30, 2026, 15:00)
+You now have 2 tasks in the list, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+Your Majesty, here are the tasks in your list:
+1. [D][ ] Submit report (by: Dec 31, 2026, 23:59)
+2. [E][ ] Team meeting (from: Dec 30, 2026, 14:00, to: Dec 30, 2026, 15:00)
+____________________________________________________________
+````
+
+### Result: PASS
+
+## Test case 4: Reject incomplete commands
+
+- Aim: Verify that missing descriptions, dates, task indexes, and search keywords produce the intended guidance
+- Command: `java -jar "C:/Users/jiang/Duke/ip/build/libs/athena.jar"`
+- Working directory: isolated temporary directory
+- Exit code: `0` (expected `0`)
+
+### Console input
+
+````text
+todo
+deadline Submit report
+event Team meeting /from 2026-12-30 1400
+mark not-a-number
+delete 1
+find
+````
+
+### Actual console output
+
+````text
+File not found at: ./data/athena.txt
+____________________________________________________________
+    _  _____ _   _ _____ _   _    _    
+   / \|_   _| | | | ____| \ | |  / \   
+  / _ \ | | | |_| |  _| |  \| | / _ \  
+ / ___ \| | |  _  | |___| |\  |/ ___ \ 
+/_/   \_\_| |_| |_|_____|_| \_/_/   \_\
+Hello, Your Majesty! I'm Athena.
+How may I assist you, Your Majesty?
+____________________________________________________________
+____________________________________________________________
+Please provide a todo description, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+Please provide a deadline and /by date, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+Please provide an event with /from and /to times, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+Which task shall I mark, Your Majesty?
+____________________________________________________________
+____________________________________________________________
+Your Majesty, there aren't that many tasks in the list.
+____________________________________________________________
+____________________________________________________________
+What shall I search for, Your Majesty?
+____________________________________________________________
+
+````
+
+### Expected console output
+
+````text
+File not found at: ./data/athena.txt
+____________________________________________________________
+    _  _____ _   _ _____ _   _    _
+   / \|_   _| | | | ____| \ | |  / \
+  / _ \ | | | |_| |  _| |  \| | / _ \
+ / ___ \| | |  _  | |___| |\  |/ ___ \
+/_/   \_\_| |_| |_|_____|_| \_/_/   \_\
+Hello, Your Majesty! I'm Athena.
+How may I assist you, Your Majesty?
+____________________________________________________________
+____________________________________________________________
+Please provide a todo description, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+Please provide a deadline and /by date, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+Please provide an event with /from and /to times, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+Which task shall I mark, Your Majesty?
+____________________________________________________________
+____________________________________________________________
+Your Majesty, there aren't that many tasks in the list.
+____________________________________________________________
+____________________________________________________________
+What shall I search for, Your Majesty?
+____________________________________________________________
+````
+
+### Result: PASS
+
+## Test case 5: Reject an unknown command
+
+- Aim: Verify that an unrecognized command produces Athena's unknown-command response.
+- Command: `java -jar "C:/Users/jiang/Duke/ip/build/libs/athena.jar"`
+- Working directory: isolated temporary directory
+- Exit code: `0` (expected `0`)
+
+### Console input
+
+````text
+dance
+````
+
+### Actual console output
+
+````text
+File not found at: ./data/athena.txt
+____________________________________________________________
+    _  _____ _   _ _____ _   _    _    
+   / \|_   _| | | | ____| \ | |  / \   
+  / _ \ | | | |_| |  _| |  \| | / _ \  
+ / ___ \| | |  _  | |___| |\  |/ ___ \ 
+/_/   \_\_| |_| |_|_____|_| \_/_/   \_\
+Hello, Your Majesty! I'm Athena.
+How may I assist you, Your Majesty?
+____________________________________________________________
+____________________________________________________________
+*Athena blinks her eyes, unsure of what you want, tilting 
+her head slightly as the meaning of your words slips just 
+out of reach.*
+____________________________________________________________
+
+````
+
+### Expected console output
+
+````text
+File not found at: ./data/athena.txt
+____________________________________________________________
+    _  _____ _   _ _____ _   _    _
+   / \|_   _| | | | ____| \ | |  / \
+  / _ \ | | | |_| |  _| |  \| | / _ \
+ / ___ \| | |  _  | |___| |\  |/ ___ \
+/_/   \_\_| |_| |_|_____|_| \_/_/   \_\
+Hello, Your Majesty! I'm Athena.
+How may I assist you, Your Majesty?
+____________________________________________________________
+____________________________________________________________
+*Athena blinks her eyes, unsure of what you want, tilting
+her head slightly as the meaning of your words slips just
+out of reach.*
+____________________________________________________________
+````
+
+### Result: PASS
+
+## Test case 6: Find matching tasks
+
+- Aim: Verify that the find command matches case-insensitively, prints only matching tasks, and numbers the
+- Command: `java -jar "C:/Users/jiang/Duke/ip/build/libs/athena.jar"`
+- Working directory: isolated temporary directory
+- Exit code: `0` (expected `0`)
+
+### Console input
+
+````text
+todo Read the project brief
+todo Submit the Final REPORT
+find report
+````
+
+### Actual console output
+
+````text
+File not found at: ./data/athena.txt
+____________________________________________________________
+    _  _____ _   _ _____ _   _    _    
+   / \|_   _| | | | ____| \ | |  / \   
+  / _ \ | | | |_| |  _| |  \| | / _ \  
+ / ___ \| | |  _  | |___| |\  |/ ___ \ 
+/_/   \_\_| |_| |_|_____|_| \_/_/   \_\
+Hello, Your Majesty! I'm Athena.
+How may I assist you, Your Majesty?
+____________________________________________________________
+____________________________________________________________
+As you command, Your Majesty. I've added this task:
+  [T][ ] Read the project brief
+You now have 1 tasks in the list, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+As you command, Your Majesty. I've added this task:
+  [T][ ] Submit the Final REPORT
+You now have 2 tasks in the list, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+Your Majesty, here are the matching tasks in your list:
+1. [T][ ] Submit the Final REPORT
+____________________________________________________________
+
+````
+
+### Expected console output
+
+````text
+File not found at: ./data/athena.txt
+____________________________________________________________
+    _  _____ _   _ _____ _   _    _
+   / \|_   _| | | | ____| \ | |  / \
+  / _ \ | | | |_| |  _| |  \| | / _ \
+ / ___ \| | |  _  | |___| |\  |/ ___ \
+/_/   \_\_| |_| |_|_____|_| \_/_/   \_\
+Hello, Your Majesty! I'm Athena.
+How may I assist you, Your Majesty?
+____________________________________________________________
+____________________________________________________________
+As you command, Your Majesty. I've added this task:
+  [T][ ] Read the project brief
+You now have 1 tasks in the list, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+As you command, Your Majesty. I've added this task:
+  [T][ ] Submit the Final REPORT
+You now have 2 tasks in the list, Your Majesty.
+____________________________________________________________
+____________________________________________________________
+Your Majesty, here are the matching tasks in your list:
+1. [T][ ] Submit the Final REPORT
+____________________________________________________________
+````
+
+### Result: PASS
